# octolib

./: .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Cargo.toml  INSTRUCTIONS.md  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  dependencies.yml  release.yml
doc/: 01-overview.md  02-installation.md  03-advanced-usage.md  04-advanced-guide.md  05-embedding.md  06-reranking.md  06-tool-calling.md  07-thinking.md  07-tool-calling.md  08-thinking.md
examples/: amazon_bedrock.rs  anthropic_oauth.rs  cloudflare_workers_ai.rs  fireworks_chat.rs  google_vertex_ai.rs  local_chat.rs  minimax_chat.rs  moonshot_vision.rs  openai_oauth.rs  openrouter_embeddings.rs  reranker_basic.rs  reranker_comparison.rs  structured_output.rs  test_structured_output.rs
patches/esaxx-rs/: Cargo.toml  build.rs
patches/paste/: Cargo.toml
patches/paste/src/: lib.rs
scripts/: fetch_openrouter_models.sh  openrouter_models.json
src/: config.rs  errors.rs  factory.rs  lib.rs  retry.rs  storage.rs  strategies.rs  tool_calls.rs  traits.rs  types.rs  utils.rs
src/embedding/: high_level_test.rs  integration_test.rs  mod.rs  mod_test.rs  pricing.rs  provider_test.rs  tests.rs  types.rs
src/embedding/provider/: fastembed.rs  google.rs  huggingface.rs  jina.rs  local.rs  mod.rs  mod_test.rs  octohub.rs  openai.rs  openrouter.rs  together.rs  voyage.rs
src/embedding/provider/huggingface/: jina_code_bert.rs  mod.rs  mpnet.rs
src/llm/: config.rs  factory.rs  mod.rs  reference_capabilities.rs  reference_models.rs  reference_pricing.rs  retry.rs  schema_enforcement.rs  strategies.rs  tool_calls.rs  traits.rs  types.rs  utils.rs
src/llm/providers/: amazon.rs  anthropic.rs  byteplus.rs  cerebras.rs  cloudflare.rs  codex.rs  deepseek.rs  featherless.rs  fireworks.rs  google.rs  groq.rs  local.rs  minimax.rs  mod.rs  moonshot.rs  nvidia.rs  octohub.rs  ollama.rs  openai.rs  openai_compat.rs  openrouter.rs  shared.rs  together.rs  zai.rs
src/llm/providers/cli/: claude.rs  codex.rs  cursor.rs  gemini.rs  generic.rs  mod.rs
src/providers/: amazon.rs  anthropic.rs  cloudflare.rs  deepseek.rs  google.rs  openai.rs  openrouter.rs
src/reranker/: mod.rs  types.rs
src/reranker/provider/: cohere.rs  fastembed.rs  huggingface.rs  jina.rs  local.rs  mixedbread.rs  mod.rs  voyage.rs
