[package]
name = "octolib"
version = "0.13.0"
edition = "2021"
authors = ["Muvon Un Limited <contact@muvon.io>"]
license = "Apache-2.0"
description = "Self-sufficient AI provider library with multi-provider support, embedding models, model validation, and cost tracking"
homepage = "https://octolib.muvon.io"
repository = "https://github.com/muvon/octolib"
keywords = ["ai", "llm", "embeddings", "providers", "openai"]
categories = ["api-bindings", "development-tools"]

# Exclude scripts folder from crate publishing
exclude = ["scripts/"]

[features]
default = ["fastembed", "huggingface"]
fastembed = ["dep:fastembed"]
huggingface = ["dep:candle-core", "dep:candle-nn", "dep:candle-transformers", "dep:tokenizers", "dep:hf-hub"]

[dependencies]
async-trait = "0.1.89"
anyhow = "1.0.102"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "gzip"], default-features = false }
tokio = { version = "1.50.0", features = ["time", "sync", "macros", "rt-multi-thread"] }
base64 = "0.22"
thiserror = "2.0.18"
tracing = "0.1.44"
dirs = "6.0.0"
jsonwebtoken = "10"

# Embedding dependencies
tiktoken-rs = "0.9.1"

# Optional embedding provider dependencies
fastembed = { version = "5.13.0", default-features = false, features = ["hf-hub-rustls-tls", "ort-download-binaries-rustls-tls"], optional = true }
# Candle dependencies for HuggingFace support (optional)
candle-core = { version = "0.9.2", optional = true }
candle-nn = { version = "0.9.2", optional = true }
candle-transformers = { version = "0.9.2", optional = true }
tokenizers = { version = "0.22.2", optional = true }
# HuggingFace Hub - use rustls-tls to avoid native-tls dependency
hf-hub = { version = "0.4.3", default-features = false, features = ["tokio", "rustls-tls"], optional = true }

[dev-dependencies]
serial_test = "3.4.0"
tracing-subscriber = "0.3"
